REGRESSION (WebKit2): VoiceOver focus no longer follows keyboard focus https://bugs.webkit.org/show_bug.cgi?id=55959

Reviewed by Darin Adler.

NSApplication has to return the focused element within the app in order
for NSAccessibilityHandleFocusChanged() to work. The default implementation
relies on keyWindow. Consequently, in WK2, the WebProcess must override that method
to return the appropriate focused element within the WebProcess, since
there is no keyWindow.

* WebKit2.xcodeproj/project.pbxproj:
* WebProcess/WebPage/mac/AccessibilityWebPageObject.mm:
(-[AccessibilityWebPageObject accessibilityFocusedUIElement]):
* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::focusedWebPage):
* WebProcess/WebProcess.h:
* WebProcess/mac/NSApplicationOverride.mm: Added.
(-[NSApplication accessibilityFocusedUIElement]):



Canonical link: https://commits.webkit.org/70676@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80789 268f45cc-cd09-0410-ab3c-d52691b4dbfc